Build file cleanup