@@ -33,11 +33,8 @@ idea {
     }
 }
 
-compileJava {
-    options.forkOptions.jvmArgs += "--enable-preview"
-}
-
 mainClassName = "com.piotrglazar.ExampleRunner"
+
 tasks.withType(JavaCompile).each {
     it.options.compilerArgs.add('--enable-preview')
 }
